--- a/pagina_web/public/style.css
+++ b/pagina_web/public/style.css
@@ -112,9 +112,7 @@ header {
     margin-bottom:10px;
     align-items: center;
     justify-content: center;
-    width: 500px;
-    height: 190px;
-    padding: 15px;
+    padding: 30px;
     flex-direction: column;
     border-radius: 8px;
     background-color: rgb(238, 238, 238);
@@ -127,12 +125,14 @@ header {
     margin-bottom:10px;
     align-items: center;
     justify-content: center;
-    width: 500px;
-    height: 190px;
-    padding: 15px;
+    padding: 30px;
     flex-direction: column;
     border-radius: 8px;
     background-color: rgb(238, 238, 238);
+}
+
+.enable-button {
+    
 }
 
 
