--- a/pagina_web/public/style.css
+++ b/pagina_web/public/style.css
@@ -266,6 +266,7 @@ a.negros:visited {
     background: rgba(0, 0, 0, 0.7);
     color: white;
     height: 85%;
+    padding: 25px;
 } 
 
 /* .container {
